add slides for w12

--- a/era/era_slides_w11.tex
+++ b/era/era_slides_w11.tex
@@ -137,7 +137,7 @@
     \item Aufbau bspw. mittels Shannon-Zerlegung: $f(x_0, x_1) \rightarrow f_{x_0=0}(x_1), f_{x_0=1}(x_1)$
     \item ROBDDs sind kanonisch (eindeutig)!
     \item I-Reduktion (1): Zusammenführung isomorpher Knoten
-    \item S-Reduktion (2): \enqutote{Überflüssige} Knoten entfernen (beide Kinder zeigen auf selben Nachfolger)
+    \item S-Reduktion (2): \enquote{Überflüssige} Knoten entfernen (beide Kinder zeigen auf selben Nachfolger)
   \end{itemize}
   \begin{center}
     \includegraphics[width=0.8\textwidth]{w11_bdd_reduction.png}
